<resources>
    <string name="app_name">VitalFit</string>
    <string name="label_bienvenida">Hola! Identifíquese para iniciar sesión</string>
    <string name="label_login">Iniciar Sesión</string>
    <string name="label_password">Contraseña</string>
    <string name="label_dni">DNI</string>
    <string name="label_nuevoUsuario">¿Eres un nuevo usuario? Regístrate ahora</string>
    <string name="label_forgetPassword">Olvidé mi contraseña</string>
    <string name="menu_home">Home</string>
    <string name="menu_consejos">Consejos</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_datos_personales">Datos personales</string>
    <string name="menu_pagina_principal">Menu Principal</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrarSesion">Cerrar Sesión</string>
    <string name="label_eleccion_usuario">¿Qué tipo de usuario es?</string>
    <string name="label_nuevaPassword">Introduzca a continuación su dni y la nueva contraseña que quiere establecer</string>
    <string name="label_elegirPaciente">Seleccione el paciente</string>
    <string name="label_elegirDiaSemana">Seleccione el día de la semana</string>
    <string name="title_activity_inicio_medico">InicioMedicoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_inicio_nutricionista">InicioNutricionistaActivity</string>

    <string-array name="provincias">
        <item>Álava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>La Coruña</item>
        <item>Cuenca</item>
        <item>Gerona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Guipúzcoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Islas Baleares</item>
        <item>Jaén</item>
        <item>León</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Orense</item>
        <item>Palencia</item>
        <item>Las Palmas</item>
        <item>Pontevedra</item>
        <item>La Rioja</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>

    <string-array name="otrosDatos">
        <item>Alergias</item>
        <item>Operaciones</item>
        <item>Otras Observaciones</item>
    </string-array>

    <string-array name="tipoAlergia">
        <item>Medicinal</item>
        <item>Alimentaria</item>
    </string-array>

    <string-array name="diasDeLaSemana">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>

    <string-array name="tramoComida">
        <item>Desayuno</item>
        <item>Media mañana</item>
        <item>Almuerzo</item>
        <item>Merienda</item>
        <item>Cena</item>
    </string-array>

</resources>