<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pagina_principal"
            android:icon="@drawable/ic_house"
            android:title="@string/menu_pagina_principal" />
        <item
            android:id="@+id/nav_datos_personales"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_datos_personales" />
        <item
            android:id="@+id/nav_consejos"
            android:icon="@drawable/ic_mensaje"
            android:title="@string/menu_consejos" />

        <item
            android:id="@+id/paginaInicial"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Cerrar Sesión" />

    </group>
</menu>