<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_nutricionista"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tfg.vitalfit.activity.uiNutricionista.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tfg.vitalfit.activity.uiNutricionista.datosPersonales.DatosPersonalesNutricionistaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_datospersonales_medico" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tfg.vitalfit.activity.uiNutricionista.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>