<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_pagina_principal">

    <fragment
        android:id="@+id/nav_pagina_principal"
        android:name="com.tfg.vitalfit.activity.uiPaciente.home.HomeFragment"
        android:label="@string/menu_pagina_principal"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_datos_personales"
        android:name="com.tfg.vitalfit.activity.uiPaciente.datosPersonales.DatosPersonalesPacienteFragment"
        android:label="@string/menu_datos_personales"
        tools:layout="@layout/fragment_datospersonales" />

    <fragment
        android:id="@+id/nav_consejos"
        android:name="com.tfg.vitalfit.activity.uiPaciente.consejos.ConsejosFragment"
        android:label="@string/menu_consejos"
        tools:layout="@layout/fragment_consejos" />
</navigation>