<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <LinearLayout
        android:id="@+id/linearParte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/ic_launcher_background">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"
                android:src="@drawable/ic_menu_camera" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearParte2"
        android:layout_below="@+id/linearParte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_bienvenida"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_dni"
            app:startIconDrawable="@drawable/ic_dni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapCharacters"
                android:maxLength="9"
                android:paddingStart="48dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:paddingStart="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte3"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <CheckBox
            android:id="@+id/chkPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paciente" />

        <CheckBox
            android:id="@+id/chkMedico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Médico" />

        <CheckBox
            android:id="@+id/chkNutricionista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nutricionista" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte5"
        android:layout_below="@+id/linearParte4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:drawableTint="#fff"
            android:drawableEnd="@drawable/ic_login"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearParte6"
        android:layout_below="@+id/linearParte5"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_nuevoUsuario"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/linearParte6"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtForgetPassword"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_forgetPassword"/>

    </LinearLayout>

</RelativeLayout>