<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.OlvidarPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/barOlvidoPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarOlvidoPassword"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/light_green"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="Cambio de contraseña"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte3"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEleccionUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_eleccion_usuario"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearParte5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte4"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/chkPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paciente" />

        <CheckBox
            android:id="@+id/chkMedico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Médico" />

        <CheckBox
            android:id="@+id/chkNutricionista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nutricionista" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linearParte1"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <TextView
            android:id="@+id/txtIngresarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_nuevaPassword"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuarioDNI"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/label_dni"
            app:startIconDrawable="@drawable/ic_dni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapCharacters"
                android:maxLength="9"
                android:paddingStart="48dp"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/label_password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:paddingStart="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPasswordValidacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:hint="Introduzca nuevamente la contraseña"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordValidacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:paddingStart="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <Button
            android:id="@+id/btnOlvidoPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Cambiar contraseña" />
    </LinearLayout>

</LinearLayout>